--- a/act1CSS/index.html
+++ b/act1CSS/index.html
@@ -14,7 +14,7 @@
         <h1>Lorem ipsum dolor sit amet</h1>
         <p>
             Consectetur adipisicing elit. Provident quam corrupti sed, molestiae quisquam deleniti
-            commodi aliquid odit totam quaerat laudantium, repellendus voluptatum assumenda tenetur consequatur non aut
+            commodi aliquid odfdgdsgsffgit totam quaerat laudantium, repellendus voluptatum assumenda tenetur consequatur non aut
             hic
             libero.
         </p>
